--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,17 @@
 body {
-	background-color: skyblue;
-	margin: 50px;
+	background-color: aliceblue;
+	margin: 100px;
+	font-family: helvetica;
+}
+h1 {
+	font-size: 50px;
+}
+h2 {
+	font-size: 30px;
+}
+ul {
+	font-size: 20px;
+}
+a {
+	color: lightcoral;
 }
