--- a/p1/page4/css/main.css
+++ b/p1/page4/css/main.css
@@ -1,11 +1,21 @@
 body {
 	background-color: aliceblue;
 	margin: 100px;
-	font-family: helvetica;
+	font-family: "neue-haas-grotesk-display", sans-serif;
+	font-weight: 700;
+	font-style: normal;
+	color: slategrey;
+	font-size: 16px;
 }
 a {
+	text-decoration: none;
+}
+a:link {
 	color: skyblue;
 }
-p {
-	font-size: 25px;
+a:visited {
+	color: cornflowerblue;
+}
+a:hover {
+	color: lightskyblue;
 }
