--- a/e7/css/main.css
+++ b/e7/css/main.css
@@ -1,6 +1,8 @@
 body {
 	margin: 144px;
-	margin-top: 144+72px;
+	margin-top: 200px;
+	margin-right: 300px;
+	margin-right: 450px;
 	background-color: #E64B4B;
 	color: white;
 }
@@ -8,10 +10,12 @@ h1, h2, h3 {
 	font-family: rockwell-nova, sans-serif;
 	font-weight: 700;
 	font-style: normal;
+	font-size: 32px;
+	line-height: 34px;
 }
 .title {
-	font-size: 84px;
-	line-height: 88px;
+	font-size: 96px;
+	line-height: 100px;
 	letter-spacing: 2px;
 }
 .memo {
@@ -24,9 +28,10 @@ p, ul, li {
 	font-weight: 400;
 	font-style: normal;
 	font-size: 16px;
+	margin-right: 300px;
 }
 .size {
-	font-size: 20px;
+	font-size: 24px;
 	letter-spacing: 1px;
 }
 .bold {
@@ -35,5 +40,5 @@ p, ul, li {
 	font-style: normal;
 }
 .color-word {
-	color: yellow;
+	color: darkblue;
 }
