--- a/e7/css/main.css
+++ b/e7/css/main.css
@@ -6,7 +6,7 @@ body {
 	background-color: #E64B4B;
 	color: white;
 }
-h1, h2, h3 {
+h1, h2, h3, h4 {
 	font-family: rockwell-nova, sans-serif;
 	font-weight: 700;
 	font-style: normal;
